Fix display on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -200,7 +200,7 @@ a {
 
 .container {
     width: 100%;
-    padding: 4rem 16rem;
+    padding: 0 16rem 4rem;
     max-width: 1600px;
 }
 
@@ -331,10 +331,6 @@ a {
     align-items: center;
     justify-content: center;
     gap: 3rem;
-}
-
-.projects-div h1 {
-    margin-left: 3rem;
 }
 
 .projects-container {
@@ -494,18 +490,136 @@ a {
     color: black;
 }
 
+.navbar {
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    margin-top: 1rem;
+    margin-bottom: 4rem;
+    font-size: 1.5rem;
+}
+
+.navbar-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 60px;
+    width: 100%;
+}
+
+.menu-icon {
+    display: none;
+    color: var(--text-color);
+    cursor: pointer;
+    font-size: 1.8rem;
+}
+
+.nav-menu {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+}
+
+.nav-item {
+    height: 60px;
+}
+
+.nav-links {
+    color: var(--text-color);
+    text-decoration: none;
+    padding: 0 1rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    transition: 0.1s;
+}
+
+.nav-links:hover {
+    color: var(--primary-color);
+}
+
 @media only screen and (max-width: 999px) {
     .container {
-        padding: 0;
+        padding: 0 1rem 4rem;
+        box-sizing: border-box;
     }
 
     .projects-container,
-    .icon-cards {
+    .icon-cards,
+    .project-card .project-card-content .contentBx {
         grid-template-columns: 1fr;
+    }
+
+    .project-card {
+        width: 300px;
+        height: 300px;
+    }
+
+    .project-card .project-card-description {
+        width: 300px;
+    }
+
+    .project-card .project-card-content .imgBx {
+        width: 228px;
+        height: 152px;
+    }
+
+    .project-card .project-card-content .contentBx {
+        width: 200px;
+    }
+
+    .project-card:hover .project-card-content .contentBx .project-card-title {
+        transform: translateX(0px);
     }
 
     .contact-div {
         grid-template-columns: 1fr 1fr;
+    }
+
+    .navbar-container {
+        padding: 0 20px;
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .nav-menu {
+        flex-direction: column;
+        width: 100%;
+        height: calc(100vh - 60px);
+        position: absolute;
+        top: 60px;
+        left: -100%;
+        opacity: 0;
+        transition: all 0.5s ease;
+        background: var(--background-color);
+    }
+
+    .nav-menu.active {
+        left: 0;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 1;
+    }
+
+    .nav-item {
+        width: 100%;
+        padding: 1rem;
+    }
+
+    .nav-links {
+        text-align: center;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
